# Agent_Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.json
example_data/knowledge/: discounted-cache-flow.md  ebitda.md  internal-rate-of-return.md  net-present-value.md  porters-five-forces.md  sensitivity-analysis.md  swot-analysis.md  weighted-average-cost-of-capital.md
example_data/skills/: business-analyst.md  portfolio_analysis.md
example_data/workspace/finance/company_reports/: cedarbrook_annual_2023.txt  orion_dynamics_q3_2024.txt
example_data/workspace/finance/portfolios/: growth_portfolio_nov2024.txt
example_data/workspace/finance/research/: macro_brief_q4_2024.txt  semiconductor_sector_note.txt
example_data/workspace/finance/tasks/: open_tasks.txt
src/: main.cpp
src/agents/: Agent.cpp  Agent.h  StreamProcessor.cpp  StreamProcessor.h
src/infrastructure/: AgentStats.h  BM25.cpp  BM25.h  ChatMessage.h  ContextManager.cpp  ContextManager.h  Keccak.cpp  Keccak.h  MemoryConfig.h  SamplingConfig.h  Stopwatch.h  ToolConfig.h  Utility.h
src/interfaces/: IModel.h  ITool.h  IToolRegistry.h
src/model_services/: BackendService.cpp  BackendService.h  ContextService.cpp  ContextService.h  EmbeddingService.cpp  EmbeddingService.h  ModelService.cpp  ModelService.h  PromptService.cpp  PromptService.h  SamplerService.cpp  SamplerService.h  SummarizationService.cpp  SummarizationService.h
src/models/: EmbeddingModel.cpp  EmbeddingModel.h  LlamaModel.cpp  LlamaModel.h  LlamaWrapper.cpp  LlamaWrapper.h
src/rag/knowledge/: Card.h  KnowledgeBase.cpp  KnowledgeBase.h
src/rag/memory/: MemoryManager.cpp  MemoryManager.h
src/rag/skills/: SkillStore.cpp  SkillStore.h
src/tools/: InternalTools.h  ToolRegistry.cpp  ToolRegistry.h
src/tools/io/: ExploreDirectoryTool.cpp  ExploreDirectoryTool.h  FileInfoTool.cpp  FileInfoTool.h  FileReadTool.cpp  FileReadTool.h  FileWriteTool.cpp  FileWriteTool.h
src/tools/knowledge/: ListKnowledgeTool.cpp  ListKnowledgeTool.h  LoadKnowledgeTool.cpp  LoadKnowledgeTool.h  SearchKnowledgeTool.cpp  SearchKnowledgeTool.h
src/tools/memory/: RememberTool.cpp  RememberTool.h  SearchMemoryTool.cpp  SearchMemoryTool.h
